--- a/build.xml
+++ b/build.xml
@@ -124,7 +124,28 @@
     </javac>
   </target>
 
-  <target name="test" depends="compile-test" description="Package bin to target jar, clean bin.">
+  <target name="test" depends="jar-test" description="Package and run tests.">
+
+    <antcall target="test-random"/>
+    <antcall target="test-stringio"/>
+
+  </target>
+
+  <target name="test-random" depends="jar-test" description="Package and run tests.">
+
+    <java classpath="${target.test.jar}" classname="Random" fork="true" failOnError="true">
+    </java>
+
+  </target>
+
+  <target name="test-stringio" depends="jar-test" description="Package and run tests.">
+
+    <java classpath="${target.test.jar}" classname="StringIO" fork="true" failOnError="true">
+    </java>
+
+  </target>
+
+  <target name="jar-test" depends="compile-test" description="Package bin to target jar, clean bin.">
 
     <delete file="${target.test.jar}"/>
     <jar jarfile="${target.test.jar}" basedir="${test.bin}" >
